fixed content getting cutted off on small screen
The most important changes here is changing 'height' to 'min-height'.

--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 9vh);
+    min-height: calc(100% - 9vh);
     margin: 4.5vh auto;
 }
 
