--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: calc(100% - 9vh);
+	min-height: calc(100% - 9vh);
 	margin: 4.5vh auto;
 }
 
